--- a/Serilog.Sinks.AliyunSls.Demo/appsettings.json
+++ b/Serilog.Sinks.AliyunSls.Demo/appsettings.json
@@ -1,9 +1,45 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "Using": [ "Serilog.Enrichers.ClientInfo", "Serilog.Expressions" ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "Filter": [
+      {
+        "Name": "ByExcluding",
+        "Args": {
+          "expression": "RequestPath like '/health%'"
+        }
+      }
+    ],
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] [{ClientIp}] [{SourceContext}] {Message:lj}{NewLine}{Exception} [{Properties:j}]{NewLine}"
+        }
+      },
+      {
+        "Name": "AliyunSls",
+        "Args": {
+          "Endpoint": "",
+          "AccessKeyId": "",
+          "AccessKeySecret": "",
+          "Project": "",
+          "LogStore": "",
+          "Topic": "",
+          "BatchSizeLimit": 1000,
+          "Period": 2,
+          "QueueLimit": 100000,
+          "EagerlyEmitFirstEvent": true,
+          "EnableBatch": true
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithClientIp" ]
   },
   "AllowedHosts": "*"
 }
